tests/fixtures/pass/module_default_alias.walrus
import "../modules/math_ops.walrus";

println(math_ops["add"](1, 2));
