tests/fixtures/fail/stdlib/stdlib_math_rand_int_invalid_range_vm.walrus
import "std/math";

println(math.rand_int(10, 1));
